feat: for geo/cantonOuVille/{code}/suivants
